# Nonebot_Bot_MayaFey

./: .env.dev  .env.prod  Dockerfile  LICENSE  README.md  __version__  bot.py  docker-compose.yml  pyproject.toml  start.bat
.github/workflows/: lock.yml
Api/: __init__.py
Api/api/: __init__.py  exception.py  model.py  utils.py
Api/api/groups/: __init__.py
Api/api/login/: __init__.py
Api/api/other/: __init__.py
Api/api/plugins/: __init__.py
Api/api/statistics/: __init__.py
Api/api/system/: __init__.py
Api/api/test/: __init__.py
config/: translate.json
config/back/: 925733784.txt  928925794.txt
config/ban_word/: level.json
config/control/: unset.txt
config/control/853012695/: control.json
config/control/925733784/: control.json
config/control/928925794/: control.json
config/fortune/: fortunr_setting.json  specific_rules.json
config/morning/: config.json
config/permission/: permissions.json
config/permission/common/: 123456789.json  925733784.json
config/permission/special/: 123456789.json  928925794.json
config/reboot/: reboot.json
config/russian/: russian_data.json
config/total/: unable.txt
config/total/2022-04/: 853012695.json  925733784.json  928925794.json
config/update/: updating.json
config/welcome/: 853012695.txt
config/word_cloud/: word_config.txt
content/: api_return.txt
content/plugin_personal/: __init__.py
content/plugin_personal/website/: __init__.py
content/plugin_private/: __init__.py
content/plugin_private/execSql/: __init__.py
content/plugin_private/friends/: __init__.py  tools.py
content/plugin_private/sending/: __init__.py
content/plugins/: __init__.py
content/plugins/AI_talk/: __init__.py  tools.py
content/plugins/DailyWife/: __init__.py  config.py  data.py  record.py
content/plugins/GenshinPray/: GenshinPray.py  __init__.py  tools.py
content/plugins/admin/: __init__.py  utils.py
content/plugins/answersbook/: __init__.py  answersbook.json
content/plugins/auto_baned/: __init__.py  tools.py
content/plugins/ban_pic/: __init__.py  config.py  data.py
content/plugins/ban_word/: __init__.py  tools.py
content/plugins/blackjack/: __init__.py  card.py  game.py
content/plugins/covid19/: __init__-副本.py  __init__.py  data.json  data.py  data_load.py  policy.py  tools.py  uilts.py
content/plugins/credit/: LuckyMoney.py  __init__.py  tools.py
content/plugins/curfew/: __init__.py  tools.py
content/plugins/demerit/: __init__.py  tools.py
content/plugins/enable/: __init__.py
content/plugins/epicfree/: __init__.py  data_source.py  status.json
content/plugins/execSql/: __init__.py
content/plugins/flash/: __init__.py
content/plugins/fortune/: __init__.py  config.py  data_source.py  download.py  utils.py
content/plugins/gspanel/: __init__.py  __utils__.py  data_source.py
content/plugins/guessMember/: __init__.py  config.py  data_source.py  game.py  tools.py
content/plugins/help/: __init__.py  handler.py
content/plugins/heweather/: __init__.py  render_pic.py  weather_data.py
content/plugins/ian/: __init__.py
content/plugins/leave/: __init__.py  tools.py
content/plugins/logo/: __init__.py  data_source.py
content/plugins/memes/: __init__.py  download.py  manager.py
content/plugins/menu/: __init__.py
content/plugins/morning/: __init__.py  data_source.py  download.py
content/plugins/nethot/: __init__.py
content/plugins/notices/: __init__.py  rules.py
hook/: __init__.py  hook_enable.py  hook_fast.py  hook_lock.py  hook_total.py  hook_update.py
hook/hook/: __init__.py  hook_cd.py  hook_enable.py  hook_fast.py  hook_lock.py  hook_permission.py  hook_reboot.py  hook_total.py  hook_update.py
resource/database/: bot.sql
resource/fortune/: copywriting.json
resource/txt/: 违禁词.txt  违禁词_简单.txt
service/: ConfigInitial.py  __init__.py
utils/: __init__.py  admin_tools.py  config.py  const.py  database_mysql.py  hook.py  hook_fast.py  hook_permission.py  hook_total.py  hook_update.py  json_tools.py  matcherManager.py  other.py  path.py  permission.py  requests_tools.py  url.py  users.py
utils/htmlrender/: browser.py
(+154 files in other folders)
