[tool.poetry]
name = "maya fey"
version = "0.7.0"
description = ""
authors = ["Shine-Light <shine_light@qq.com>"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.poetry.dependencies]
python = "^3.9"
aiocache = "^0.12.0"
aiocqhttp = "^1.4.2"
aiofiles = "^23.1.0"
aiohttp = "^3.8.4"
fontTools = "^4.39.4"
httpx = "^0.24.0"
imageio = "^2.26.0"
jieba = "^0.42.1"
Jinja2 = "^3.0.3"
loguru = "^0.6.0"
Markdown = "^3.3.6"
nonebot2 = "^2.0.0rc4"
nonebot-plugin-imageutils = "^0.1.17"
nonebot-plugin-apscheduler = "^0.3.0"
nonebot-plugin-htmlrender = "^0.2.0.1"
meme-generator = "^0.0.13"
pypinyin = "^0.49.0"
nonebot-adapter-onebot = "^2.2.3"
Pillow = "^9.4.0"
playwright = "^1.31.1"
pydantic = "^1.10.8"
pyee="^9.0.4"
PyMySQL = "^1.0.2"
requests = "^2.31.0"
tencentcloud_sdk_python = "^3.0.863"
typing_extensions = "^4.7.1"
ujson = "^5.6.0"
wordcloud = "^1.8.1"
msgpack = "^1.0.5"
cryptography = "^41.0.1"
pymdown-extensions = "^10.0"
python-markdown-math = "^0.8"
PyJWT = "^2.6.0"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]


[tool.nonebot]
plugins = []
plugin_dirs = ["content/plugins", "content/plugin_private",
            "Api", "hook", "service"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
